# league-aram-builder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OVERLAY_ASSESSMENT.md  PLAN-scaling-specs.md  README.md  SECURITY.md  pyproject.toml  riot.txt
.claude/: settings.json
.claude/plans/: overlay-ui.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: config.py  diagnostics.py  github_reporter.py  main.py  models.py  tui.py
backend/api/: server.py
backend/collectors/: lcda.py  lcu.py  screen_ocr.py
backend/engine/: augment_detector.py  build_suggester.py  label.py  ranker.py  role_weights.py  scaling.py  scoring.py
backend/overlay/: __main__.py  webview_window.py  window.py
backend/static_data/: loader.py  updater.py
backend/storage/: db.py  sync.py
backend/workflow/: pipeline.py
build2/aram-oracle/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-aram-oracle.txt  xref-aram-oracle.html
data/augments/: overrides.json  scaling.json
data/champions/: champions.json  synergies.json
frontend/: app.js  index.html  style.css
overwolf/: README.md  package-lock.json  package.json
overwolf/src/: main.js
scripts/: build_exe.py  generate_champions.py  inspect_overlays.py
tests/: conftest.py  test_build_suggester.py  test_config.py  test_db.py  test_diagnostics.py  test_github_reporter.py  test_integration.py  test_label.py  test_pipeline.py  test_ranker.py  test_scaling.py  test_scoring.py
tests/fixtures/: champ_select.json  game_snapshot.json
(+8 files in other folders)
