[project]
name = "aram-oracle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "requests>=2.31",
    "numpy>=1.26",
    "rich>=13.7",
    "mss>=9.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
overlay = [
    "PyQt6>=6.5",
    "PyQt6-WebEngine>=6.5",
]
webview-overlay = [
    "pywebview>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
